--- a/yl-api-gateway/src/main/resources/application.yml
+++ b/yl-api-gateway/src/main/resources/application.yml
@@ -1,3 +1,4 @@
+
 server:
   port: 10010
 spring:
@@ -15,6 +16,8 @@ eureka:
 zuul:
   prefix: /api #添加路由前缀
   retryable: true
+  routes:
+    goods-service: /goods/** # 将商品微服务映射到/goods/**
 ribbon:
   ConnectTimeout: 250 # 连接超时时间（ms）
   ReadTimeout: 2000 # 通信超时时间（ms）
